crates/tui/tests/storybook/snapshots/app_goal__goal_banner_states.active_auto.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
 GOAL Parser migration · Step 2/5, wiring parser state     auto
                                                       14:37:03
 Please keep working toward the parser migration.








  tip ctrl+enter / ctrl+q, steer the current response without…
────────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────
 ○ normal                                               1:1 100%
