crates/tui/tests/storybook/snapshots/app_goal__goal_banner_states.blocked.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
 BLOCKED waiting for parser fix… · Step 2/5, wiring parser state
                                                      14:37:03
 Please keep working toward the parser migration.








  tip ctrl+enter / ctrl+q, steer the current response without…
────────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────
 ○ normal                                               1:1 100%
