crates/tui/tests/storybook/snapshots/app_goal__goal_banner_states.blocked.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 64 16
  0   0   9 fg=AnsiValue(0) bg=AnsiValue(203) attrs=bold
  0   9  55 fg=AnsiValue(0) bg=AnsiValue(39)
  1   0  54 bg=AnsiValue(236)
  1  54   8 fg=Rgb { r: 128, g: 128, b: 128 } bg=AnsiValue(236)
  1  62   1 bg=AnsiValue(236)
  2   0   1 bg=AnsiValue(236)
  2   1  48 bg=AnsiValue(236) attrs=bold
  2  49  14 bg=AnsiValue(236)
  3   0  63 bg=AnsiValue(236)
 11   0   6 fg=AnsiValue(208) attrs=bold
 11   6  19 fg=AnsiValue(244)
 11  25   2 fg=AnsiValue(244) attrs=dim
 11  27  35 fg=AnsiValue(244)
 12   0  64 fg=AnsiValue(237)
 13   1   1 fg=Black bg=White
 14   0  64 fg=AnsiValue(237)
 15   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 15  10  46 bg=AnsiValue(233)
 15  56   8 fg=AnsiValue(244) bg=AnsiValue(233)
